--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
     "typescript": "^4.9.3",
     "url-slug": "^3.0.4",
     "vite": "^4.1.0-beta.1"
+  },
+  "dependencies": {
+    "filepond": "^4.30.4",
+    "svelte-filepond": "^0.2.0"
   }
 }
