--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postcss-load-config": "^4.0.1",
     "svelte": "^3.55.1",
     "svelte-check": "^2.10.3",
+    "svelte-heros-v2": "^0.4.2",
     "svelte-preprocess": "^4.10.7",
     "svelte-spa-router": "^3.3.0",
     "tailwindcss": "^3.1.5",
