--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vite": "^4.1.0-beta.1"
   },
   "dependencies": {
+    "bech32": "^2.0.0",
     "filepond": "^4.30.4",
     "svelte-filepond": "^0.2.0"
   }
