--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "bech32": "^2.0.0",
     "filepond": "^4.30.4",
+    "html2canvas": "^1.4.1",
     "svelte-filepond": "^0.2.0"
   }
 }
