--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   "dependencies": {
     "bech32": "^2.0.0",
     "filepond": "^4.30.4",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.11",
     "html2canvas": "^1.4.1",
     "svelte-filepond": "^0.2.0"
   }
