--- a/package.json
+++ b/package.json
@@ -34,11 +34,18 @@
   "dependencies": {
     "@stacks/connect": "^7.2.1",
     "bech32": "^2.0.0",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "events": "^3.3.0",
     "filepond": "^4.30.4",
     "filepond-plugin-image-exif-orientation": "^1.0.11",
     "filepond-plugin-image-preview": "^4.6.11",
     "html2canvas": "^1.4.1",
+    "process": "^0.11.10",
+    "sats-connect": "^0.1.11",
     "stackjs": "^1.0.0",
-    "svelte-filepond": "^0.2.0"
+    "stream-browserify": "^3.0.0",
+    "svelte-filepond": "^0.2.0",
+    "util": "^0.12.5"
   }
 }
