--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vite": "^4.1.0-beta.1"
   },
   "dependencies": {
+    "@micro-stacks/svelte": "^1.0.7",
     "@stacks/connect": "^7.2.1",
     "bech32": "^2.0.0",
     "browserify-zlib": "^0.2.0",
