--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "buffer": "^6.0.3",
     "events": "^3.3.0",
     "filepond": "^4.30.4",
+    "filepond-plugin-file-validate-size": "^2.2.8",
     "filepond-plugin-file-validate-type": "^1.2.8",
+    "filepond-plugin-image-crop": "^2.0.6",
     "filepond-plugin-image-exif-orientation": "^1.0.11",
     "filepond-plugin-image-preview": "^4.6.11",
     "html2canvas": "^1.4.1",
